Day 4 - Recipe Project
It is almost finished. I still need to improve the code a little bit more.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="myScript.js"></script>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Pacifico|Slabo+27px|Cookie|San_Francisco|Helvetica_Neue|Helvetica|Ubuntu|Roboto|Noto|Segoe_UI|Arial|Raleway' rel='stylesheet' type='text/css'>
   </head>
@@ -20,7 +15,7 @@
     <div id='box'>
       <div id='principal_image'>
         <a href="#" title="45 mins"><i class="fa fa-clock-o fa-2x"></i></a>
-        <img src='https://goo.gl/9DyG9x' alt='Stuffed eggplant with tomato salad,
+        <img src='https://goo.gl/JK2fZe' alt='Stuffed eggplant with tomato salad,
         Photo by Mariana Medvedeva on Unsplash'>
         <a id='down' href="https://goo.gl/1M3xw4" target="_blank" rel="noopener noreferrer"
         title="Download free do whatever you want high-resolution photos from Mariana Medvedeva">
@@ -68,6 +63,9 @@
             <span class="fa fa-star-half-o"></span>
             <span class='number-rating'>7.825</span>
           </div>
+          <p>Savour the spices of Morocco with this succulent stuffed aubergine recipe.
+            Filled with a spiced cous cous and served with a fresh cucumber and tomato
+            salsa salad, this makes an easy vegan, vegetarian and dairy-free midweek meal.</p>
         </div>
 
         <div id='ingredients' class='tabcontent'>
@@ -87,14 +85,80 @@
 
         <div id='preparation' class='tabcontent'>
           <h1>Preparation</h1>
+          <br>
+          <div id='scroll'>
+            <h3>Step 1</h3>
+            <p class='prep'>Preheat the oven to gas 7, 220°C, fan 200°C. Deeply score the flesh of the cut sides
+               of the aubergines in a criss-cross pattern, going down to but not through the skin. Brush
+               2 tsp oil over the scored surface. Put in a large roasting tray and roast for 30 mins.</p>
+            <h3>Step 2</h3>
+            <p class='prep'>Meanwhile, put the couscous, ras el hanout and 200ml (7fl oz) boiling water in a large
+               bowl. Stir, cover and set aside for 10 mins. Add the mint leaves to the couscous; mix.</p>
+            <h3>Step 3</h3>
+            <p class='prep'>Meanwhile, mix the cucumber, tomatoes, red onion and most of the parsley in a serving bowl.</p>
+            <h3>Step 4</h3>
+            <p class='prep'>Remove the cooked aubergines from the oven and leave to cool for a few minutes.
+              Preheat the grill to the highest setting.</p>
+            <h3>Step 5</h3>
+            <p class='prep'>Use a metal spoon to carefully scoop the flesh from the aubergine halves, leaving the
+              skin intact. Put the skins back on the tray then roughly chop the esh and mix into the
+              couscous. Spoon the mix into the skins then drizzle with the remaining oil. Grill for
+              3-4 mins, to crisp the top.</p>
+            <h3>Step 6</h3>
+            <p class='prep'>Serve two roasted aubergine halves per person, scattered with the remaining parsley and
+              the salad alongside.</p>
+          </div>
         </div>
 
         <div id='calories' class='tabcontent'>
           <h1>Calories</h1>
+          <div class="gda-widget recipe-tool-gda" itemprop="nutrition" itemscope="" itemtype="http://schema.org/NutritionInformation">
+            <ul class="gda-values-list">
+              <li class="energy">
+                <span class="heading">Energy</span>
+                <span class="kj">710kj</span>
+                <span class="kcal" itemprop="calories">167kcal</span>
+                <span class="percentage">8%</span>
+              </li>
+              <li class="fat low 1.4">
+                <span class="heading">Fat</span>
+                <span class="value" itemprop="fatContent">4g</span>
+                <span class="percentage">6%</span>
+              </li>
+              <li class="saturates low 0.2">
+                <span class="heading">Saturates</span>
+                <span class="value" itemprop="saturatedFatcontent">1g</span>
+                <span class="percentage">4%</span>
+              </li>
+              <li class="sugars low 1.8">
+                <span class="heading">Sugars</span>
+                <span class="value" itemprop="sugarContent">8g</span>
+                <span class="percentage">9%</span>
+              </li>
+              <li class="salt low 0.0">
+                <span class="heading">Salt</span>
+                <span class="value">0.1g</span>
+                <span class="percentage">2%</span>
+              </li>
+            </ul>
+            <p class="gda-reference">of the <a href="/our-food/what-is-healthy.html">reference intake</a><br>
+            Carbohydrate <span itemprop="carbohydratecontent">28.3g</span>  Protein <span itemprop="proteincontent">6.2g</span>  Fibre <span itemprop="fibercontent">2.2g</span></p>
+          </div>
         </div>
-
       </div>
+
+      <footer>
+        <div id='footer'>
+          <hr>
+          <p>Inspired by: · <a href='https://codepen.io/vascomartins/pen/LxBLEo'>Recipe Card</a> a PEN by <a href='https://codepen.io/vascomartins'>Vasco Martins ·
+           <a href='https://codepen.io/THEORLAN2/pen/bpBeyv'>Recipe Card</a> a PEN by <a href='https://codepen.io/THEORLAN2/'>Dany Santos</a> ·
+           <a href='https://codepen.io/pankajparashar/pen/plcLh'>The ChiliRecipe</a> a PEN by <a href='https://codepen.io/pankajparashar/'>Pankaj Parashar</a> ·
+           <a href='https://codepen.io/davidkpiano/pen/gapLgq'>Baseline Grid Demonstration</a> a PEN by <a href='https://codepen.io/davidkpiano/'>David Khourshid</a> ·</p>
+          <p>Created by <em>Sue</em> with the help of edX - W3Cx: HTML5.0x course.</p>
+          <p>Original recipe from: · <a href='https://realfood.tesco.com/recipes/stuffed-aubergines-with-cucumber-and-tomato-salad.html'>Tesco Real Food</a> ·</p>
+        </div>
+      </footer>
+      
     </div>
   </body>
-
 </html>
