Day 4 II - Recipe Project
Optmization.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Vegetarian Recipe Tips</title>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="myScript.js"></script>
+    <script src="myScript.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Pacifico|Slabo+27px|Cookie|San_Francisco|Helvetica_Neue|Helvetica|Ubuntu|Roboto|Noto|Segoe_UI|Arial|Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arial' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
@@ -72,14 +74,14 @@
           <h1>Ingredients</h1>
           <ul class='ingredients_list' data-toggle="buttons">
             <li><input type='checkbox' id='one'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='one'><strong>4</strong> aubergines, halved lengthways</label></li>
-            <li><input type='checkbox' id='two'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='two'><strong>3 tsp</strong> olive oil</lable></li>
-            <li><input type='checkbox' id='three'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='three'><strong>100g</strong> couscous</lable></li>
-            <li><input type='checkbox' id='four'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='four'><strong>1 tsp</strong> ras el hanout</lable></li>
-            <li><input type='checkbox' id='five'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='five'><strong>&frac12;</strong> cucumber, diced</lable></li>
-            <li><input type='checkbox' id='six'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='six'><strong>2</strong> vine tomatoes, diced</lable></li>
-            <li><input type='checkbox' id='seven'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='seven'><strong>&frac12;</strong> ed onion, finely dice</lable></li>
-            <li><input type='checkbox' id='eight'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='eight'><strong>&frac13; x 30g (1oz)</strong> pack flat-leaf parsley, chopped</lable></li>
-            <li><input type='checkbox' id='nine'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='nine'><strong>&frac13; x 30g (1oz)</strong> pack mint</lable></li>
+            <li><input type='checkbox' id='two'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='two'><strong>3 tsp</strong> olive oil</label></li>
+            <li><input type='checkbox' id='three'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='three'><strong>100g</strong> couscous</label></li>
+            <li><input type='checkbox' id='four'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='four'><strong>1 tsp</strong> ras el hanout</label></li>
+            <li><input type='checkbox' id='five'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='five'><strong>&frac12;</strong> cucumber, diced</label></li>
+            <li><input type='checkbox' id='six'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='six'><strong>2</strong> vine tomatoes, diced</label></li>
+            <li><input type='checkbox' id='seven'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='seven'><strong>&frac12;</strong> ed onion, finely dice</label></li>
+            <li><input type='checkbox' id='eight'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='eight'><strong>&frac13; x 30g (1oz)</strong> pack flat-leaf parsley, chopped</label></li>
+            <li><input type='checkbox' id='nine'><i class="fa fa-square-o fa-1x"></i><i class="fa fa-check-square-o fa-1x"></i><label for='nine'><strong>&frac13; x 30g (1oz)</strong> pack mint</label></li>
           </ul>
         </div>
 
@@ -112,27 +114,27 @@
 
         <div id='calories' class='tabcontent'>
           <h1>Calories</h1>
-          <div class="gda-widget recipe-tool-gda" itemprop="nutrition" itemscope="" itemtype="http://schema.org/NutritionInformation">
+          <div class="gda-widget recipe-tool-gda">
             <ul class="gda-values-list">
               <li class="energy">
                 <span class="heading">Energy</span>
                 <span class="kj">710kj</span>
-                <span class="kcal" itemprop="calories">167kcal</span>
+                <span class="kcal">167kcal</span>
                 <span class="percentage">8%</span>
               </li>
               <li class="fat low 1.4">
                 <span class="heading">Fat</span>
-                <span class="value" itemprop="fatContent">4g</span>
+                <span class="value">4g</span>
                 <span class="percentage">6%</span>
               </li>
               <li class="saturates low 0.2">
                 <span class="heading">Saturates</span>
-                <span class="value" itemprop="saturatedFatcontent">1g</span>
+                <span class="value">1g</span>
                 <span class="percentage">4%</span>
               </li>
               <li class="sugars low 1.8">
                 <span class="heading">Sugars</span>
-                <span class="value" itemprop="sugarContent">8g</span>
+                <span class="value">8g</span>
                 <span class="percentage">9%</span>
               </li>
               <li class="salt low 0.0">
@@ -142,7 +144,7 @@
               </li>
             </ul>
             <p class="gda-reference">of the <a href="/our-food/what-is-healthy.html">reference intake</a><br>
-            Carbohydrate <span itemprop="carbohydratecontent">28.3g</span>  Protein <span itemprop="proteincontent">6.2g</span>  Fibre <span itemprop="fibercontent">2.2g</span></p>
+            Carbohydrate <span>28.3g</span>  Protein <span>6.2g</span>  Fibre <span>2.2g</span></p>
           </div>
         </div>
       </div>
@@ -150,7 +152,7 @@
       <footer>
         <div id='footer'>
           <hr>
-          <p>Inspired by: · <a href='https://codepen.io/vascomartins/pen/LxBLEo'>Recipe Card</a> a PEN by <a href='https://codepen.io/vascomartins'>Vasco Martins ·
+          <p>Inspired by: · <a href='https://codepen.io/vascomartins/pen/LxBLEo'>Recipe Card</a> a PEN by <a href='https://codepen.io/vascomartins'>Vasco Martins</a> ·
            <a href='https://codepen.io/THEORLAN2/pen/bpBeyv'>Recipe Card</a> a PEN by <a href='https://codepen.io/THEORLAN2/'>Dany Santos</a> ·
            <a href='https://codepen.io/pankajparashar/pen/plcLh'>The ChiliRecipe</a> a PEN by <a href='https://codepen.io/pankajparashar/'>Pankaj Parashar</a> ·
            <a href='https://codepen.io/davidkpiano/pen/gapLgq'>Baseline Grid Demonstration</a> a PEN by <a href='https://codepen.io/davidkpiano/'>David Khourshid</a> ·</p>
@@ -158,7 +160,7 @@
           <p>Original recipe from: · <a href='https://realfood.tesco.com/recipes/stuffed-aubergines-with-cucumber-and-tomato-salad.html'>Tesco Real Food</a> ·</p>
         </div>
       </footer>
-      
+
     </div>
   </body>
 </html>
